tests/ui/nll/borrowed-universal-error-2.stderr
error[E0515]: cannot return reference to local variable `v`
  --> $DIR/borrowed-universal-error-2.rs:3:5
   |
LL |     &v
   |     ^^ returns a reference to data owned by the current function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0515`.
